--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.1.5",
     "@babel/preset-env": "^7.1.5",
+    "axios": "^0.18.0",
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
     "css-loader": "^1.0.1",
@@ -37,6 +38,7 @@
     "lodash": "^4.17.11",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
+    "sqlite3": "^4.0.4",
     "style-loader": "^0.23.1",
     "vue": "^2.5.17",
     "vue-loader": "^15.4.2",
